--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </tbody>
         </table>
 
-        <button onclick="generateChart()">Create</button>
+        <button onclick="generateChart()">作成</button>
         <button id="startButton" onclick="startClock()">スタート</button>
         <button id="resetButton" onclick="resetClock()">リセット</button>
 
